--- a/memos/total-energies/2024-12-13-brian-and-valentin/main.tex
+++ b/memos/total-energies/2024-12-13-brian-and-valentin/main.tex
@@ -29,19 +29,19 @@
 
 \pagestyle{fancy}
 \fancyhf{}
-\lhead{Memo: Ordinator Status}
+\lhead{Memo: Ordinator Status v0.2.2}
 \rhead{Christian Brunbjerg Jespersen - cbrje@dtu.dk}
 
 \rfoot{Recipients: \textbf{Brian Friis Nielsen} \& \textbf{Valentin Ispas}}
 \lfoot{page \thepage\ of\ \pageref{LastPage}}
 
 \begin{document}
-	\section{Introduction}
+	\section{Introduction: Ordinator v0.2.2}
 	This memo is for the Ordinator scheduling project with the goal
 	of getting primary stakeholders in sync.
 	\input{status_update.tex}
 	\input{problems_and_issues.tex}
-	\input{tecnical_appendix.tex}
+	\input{technical_appendix.tex}
 	\bibliographystyle{plainnat}
 	\bibliography{../../papers/actor-based-large-neighborhood-search/refs}
 \end{document}
