--- a/memos/total-energies/2024-12-13-brian-and-valentin/problems_and_issues.tex
+++ b/memos/total-energies/2024-12-13-brian-and-valentin/problems_and_issues.tex
@@ -1,31 +1,35 @@
 \section{Problems and Issues}
-
-
 \begin{itemize}
-	\item "Customer" support
-	\item Funding of the project 
+	\item Getting in sync with stakeholders
 	\item Frontend development
 \end{itemize}
 
-\subsection{"Customer" Support}
-The success of this project relies heavily on the support from you two. I
-made the deal with Sebastien Perrier while he was still in Esbjerg that
-if I made all the backend code where you two would like the code then his
-team would supply the manpower needed to develop the frontends. 
+\subsection{Getting in sync with stakeholders}
+The success of this project relies on convincing you two that it
+could work. The issue that I am having is that I cannot develop all the frontends
+myself that will show a complete user experience.
 
-Now the problem is that if I cannot convince the two of you it becomes 
-really difficult to making this work. 
+Currently my priorities are:
+\begin{itemize} 
+	\item Backend: Make the tactical algorithm dynamic and functioning respect constraints 
+	\item Frontend: Let you manually upload resources
+	\item Frontend: Let you see live updating of the currect resource profile of the schedule 
+		that the algorithm is generating.
+\end{itemize}
 
-\subsection{Funding of the Project}
-The funding for the project is running out so I will not be able to 
-come to Esbjerg as often as I have been previously. I will try to 
-draft a proposal for a project after I come home from Decision Brain,
-they have a lot of experience with developing systems like the one that
-we are developing together. 
+So questions for you if you disagree with the priorities:
+\begin{itemize}
+	\item \colorbox{yellow}{\textbf{What aspects of the program does each of you think should be prioritized now?}}
+	\item \colorbox{yellow}{\textbf{I believe that making this program work without any involvement of a offshore}}	\\
+    	\colorbox{yellow}{\textbf{supervisor (the person responsible for assigning names to the technicians) }} \\
+		\colorbox{yellow}{\textbf{will be very difficult. Do you aggee or disagree?}}
+\end{itemize} 
 
 \subsection{Frontend Development}
-A correct implementation of the project will require a lot of frontend 
-development work, which I do not have time to do alone. I am not use 
-how to best solve this issue, especially as I lack the required 
-experience to actually know what to ask for. There is also the 
-issue that the backend code changes quickly. 
+My background is in solving scheduling problems, and it is 
+my judgement that the kind of scheduling problem that we are facing cannot be solved
+without the user interactions from the \textbf{Scheduler}, \textbf{Supervisor} 
+and the \textbf{Technician} (we will skip them for now). That means that I cannot 
+simply rely on my skills in coding scheduling systems, we need frontends to provide 
+you (and supervisors) with the \textbf{schedules} that the system generates so that 
+each scheduler (and supervisor) and quickly iterate on the schedules. 
