--- a/memos/total-energies/2024-12-13-brian-and-valentin/technical_appendix.tex
+++ b/memos/total-energies/2024-12-13-brian-and-valentin/technical_appendix.tex
@@ -2,7 +2,7 @@
 \section{Appendix}
 \subsection{Illustrative Code Parts}\label{sec:separating-concerns}
 
-\subsection{All user status codes}
+\subsubsection{All user status codes}
 \begin{alignat*}{1}
 struct\ & UserStatusCodes \\
     & appr: bool, \\
@@ -27,7 +27,7 @@ struct\ & UserStatusCodes \\
 \} \ \ &\\
 \end{alignat*}
 
-\subsection{User status codes that the Strategic Algortihms can modify}
+\subsubsection{User status codes that the Strategic Algorithms can modify}
 \begin{alignat*}{1}
 struct\ & StrategicUserStatusCodes \ \{ \\
     & work\_order\_numbers: Vec<WorkOrderNumber>,\\
@@ -39,8 +39,19 @@ struct\ & StrategicUserStatusCodes \ \{ \\
     & smat: Option<bool>,\\
 \}\ \ &\\
 \end{alignat*}
+
 \newpage
 \subsection{Mathematical Models}
+I have put the mathematical models in here only if you should find them interesting. 
+
+When designing scheduling systems, mathematical models should be seen as somewhat similar 
+to an architectural drawing when constructing a house. They set a high level blueprint of what
+the whole system should achieve and what outcomes it should produce. 
+
+Everytime that I have had an interview with either 
+of you, I have cross checked the material and insights that I got from the interview 
+and extended the models. Then I implement the model changes into the scheduling system code.
+
 \subsection{Strategic Model: A Knapsack Variant}
 \label{sec:model:strategic}
 \input{../../../tex/models/strategic.tex}
