--- a/papers/actor-based-large-neighborhood-search/main.tex
+++ b/papers/actor-based-large-neighborhood-search/main.tex
@@ -159,14 +159,14 @@ dynamic problem where information is continually updated, requiring frequent
 rescheduling. While traditionally viewed as an operations management task, this
 paper argues that general maintenance scheduling approaches can be developed by
 integrating optimization solutions into business processes guided by operations
-management principles (e.g., plan-do-check-act)~\cite{w.edwardsdemingOutCrisis}.
-This paper proposes a novel actor-based optimization framework using a large
+management principles (e.g., plan-do-check-act)~\citep{w.edwardsdemingOutCrisis}.
+This paper proposes a novel actor-based optimization approach using a large
 neighborhood search metaheuristic to address dynamic scheduling problems
 characterized by real-time data updates, external inputs influencing
 optimization, and interdependent decisions by multiple actors with differing
 objectives. The framework is tested on real-world maintenance scheduling for
 offshore platforms operated by Total Energies in the North Sea and demonstrates
-general applicability to a wide range of operational planning problems.
+general applicability to a range of operational planning problems.
 \end{abstract}
 
 %%Graphical abstract
