--- a/papers/actor-based-large-neighborhood-search/refs.bib
+++ b/papers/actor-based-large-neighborhood-search/refs.bib
@@ -46,6 +46,7 @@
 @misc{w.edwardsdemingOutCrisis,
 	title = {Out of the {{Crisis}}},
 	author = {W. Edwards Deming},
+	year = {1982},
 	urldate = {2024-12-17},
 	howpublished = {https://mitpress.mit.edu/9780262541152/out-of-the-crisis/},
 	file = {C:\Users\s174460\Zotero\storage\ELSB2EF8\out-of-the-crisis.html},
