--- a/papers/actor-based-large-neighborhood-search/refs.bib
+++ b/papers/actor-based-large-neighborhood-search/refs.bib
@@ -1,3 +1,9 @@
+@misc{total-energies,
+	author = {Total Energies},
+	howpublished = { \url{https://totalenergies.com} },
+	year = {2024},
+}
+
 @misc{scipo-code-ordinator_api,
 	author = {Scipo},
 	title = {Ordinator Api},
