Updates from Overleaf

--- a/papers/actor-based-large-neighborhood-search/main.tex
+++ b/papers/actor-based-large-neighborhood-search/main.tex
@@ -105,7 +105,7 @@
 %%            country={}}
 %% \fntext[label3]{}
 
-\title{Actor-based Large Neighborhood Search for weekly maintenance scheduling} %% Article title
+\title{Actor-based Large Neighborhood Search for Weekly Maintenance Scheduling} %% Article title
 
 %% use optional labels to link authors explicitly to addresses:
 %% \author[label1,label2]{}
