--- a/papers/actor-based-large-neighborhood-search/tex/solution_method.tex
+++ b/papers/actor-based-large-neighborhood-search/tex/solution_method.tex
@@ -57,7 +57,7 @@ able to optimize a solution that have become infeasible, LNS is well suited to h
 in the problem instance $\ProblemInstance$ itself. Another property of the message queue is 
 that the algorithm can run indefinitely and as opposed to restarting the algorithm you
 pass messages containing new data and or state. This property avoid the time consuming initial
-convergence as the algorithm will be found in an optimal state when the
+convergence as the algorithm will be found in an optimized state when the
 solution is perturbed. Notice that:
 
 \begin{itemize}
